# AMA

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CODE_REVIEW_2026-04-22.md  LICENSE  README.en.md  README.ja.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
ClaudeDesign/: AMA Prototype.html
ClaudeDesign/handoff/: 01-overview.md  02-design-tokens.md  03-file-mapping.md  04-components.md  05-new-features.md  (+2 more)
admin/: index.html  package.json
docs/: README.md  ai-services.md  architecture.md  auth-supabase.md  avatar-system.md  avatar-update-2026-02-23.md  channels-mcp.md  db-schema.md  deployment.md  development-guide.md  feature-spec.md  member-management.md  motion-team-plan.md  project-structure.md  settings-system.md  tauri-backend.md  tech-stack.md  voice-services.md
mcp-channels/: ci-webhook.mts  dev-bridge.mts  install-global.mjs  monitor-alert.mts  package-lock.json  package.json  test-channels.sh  tsconfig.json
motions/: README.md
public/: test-onnx.html  vrm
scripts/: generate-motion-catalog.mjs  generate-motion-placeholders.mjs  generate-raw-metadata.mjs  import-motion-catalog.mjs  index-motion-raw-sources.mjs  normalize-motion-intensity-sets.mjs  notarize-macos-app.mjs  prepare-assets.mjs  prune-unreferenced-motion-files.mjs  reduce-motion-groups.mjs  release-local.mjs  run-motion-team-qa.mjs  sign-macos-app.mjs  stage-bundled-models.mjs  sync-motion-clean.mjs  tune-emotions.mjs  validate-motion-assets.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/ama-bridge/: .mcp.json  server.ts  tsconfig.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  codex.rs  gemini_cli.rs  http.rs  mcp.rs  mod.rs  models.rs  screenshot.rs  settings.rs  voice.rs  vrm.rs  vrm_consts.rs  window.rs
supabase/: config.toml
(+331 files in other folders)
